Corregido estilo visual del Login de la Aplicacion

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,13 +10,16 @@
       html {
         height: 100%;
     }
+
     body {
         margin:0;
         padding:0;
         font-family: sans-serif;
-        background: linear-gradient(#141e30, #243b55);
+        background-image: url(
+          'https://live.staticflickr.com/65535/53416777101_44b3928746_b.jpg'
+        );
+        background-size: cover;
     }
-    
     .login-box {
         position: absolute;
         top: 50%;
@@ -28,6 +31,7 @@
         box-sizing: border-box;
         box-shadow: 0 15px 25px rgba(0,0,0,.6);
         border-radius: 10px;
+        background: #333;
     }
     
     .login-box h2 {
@@ -42,16 +46,17 @@
     }
     
     .login-box .user-box input {
-        width: 100%;
-        padding: 10px 0;
-        font-size: 16px;
-        color: #fff;
-        margin-bottom: 30px;
-        border: none;
-        border-bottom: 1px solid #fff;
-        outline: none;
-        background: transparent;
+      width: 100%;
+      padding: 10px 0;
+      font-size: 16px;
+      color: #fff;
+      margin-bottom: 30px;
+      border: none;
+      border-bottom: 1px solid #fff;
+      outline: none;
+      background: transparent;
     }
+
     .login-box .user-box label {
         position: absolute;
         top:0;
@@ -61,6 +66,9 @@
         color: #fff;
         pointer-events: none;
         transition: .5s;
+        color: #fff; 
+        font-size: 18px; 
+        background: transparent;
     }
     
     .login-box .user-box input:focus ~ label,
