Actualizado vistas del login

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -38,6 +38,8 @@
       box-shadow: 0 15px 25px rgba(0,0,0,.6);
       border-radius: 10px;
       background: #333;
+      text-align: center;
+
   }
   
   .login-box h2 {
@@ -85,7 +87,7 @@
       font-size: 12px;
   }
   
-  .login-box form button {
+  .login-box form a, button {
       position: relative;
       display: inline-block;
       padding: 10px 20px;
@@ -102,7 +104,7 @@
       cursor: pointer;
   }
   
-  .login-box button:hover {
+  .login-box a:hover, button:hover {
       background: #03e9f4;
       color: #fff;
       border-radius: 5px;
@@ -112,12 +114,12 @@
                   0 0 100px #03e9f4;
   }
   
-  .login-box button span {
+  .login-box button a, span {
       position: absolute;
       display: block;
   }
   
-  .login-box button span:nth-child(1) {
+  .login-box button a, span:nth-child(1) {
       top: 0;
       left: -100%;
       width: 100%;
@@ -135,7 +137,7 @@
       }
   }
   
-  .login-box button span:nth-child(2) {
+  .login-box button a, span:nth-child(2) {
       top: -100%;
       right: 0;
       width: 2px;
@@ -154,7 +156,7 @@
       }
   }
   
-  .login-box button span:nth-child(3) {
+  .login-box button a, span:nth-child(3) {
       bottom: 0;
       right: -100%;
       width: 100%;
@@ -173,7 +175,7 @@
       }
   }
   
-  .login-box button span:nth-child(4) {
+  .login-box button a, span:nth-child(4) {
       bottom: -100%;
       left: 0;
       width: 2px;
@@ -192,6 +194,23 @@
       }
   }
         
+  .login-box a.button {
+    display: inline-block; /* Importante para la estructura del botón */
+    padding: 10px 20px; /* O el padding que tengas para tus botones */
+    color: #03e9f4;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: .5s;
+    margin-top: 40px;
+    letter-spacing: 4px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    position: relative; /* Para la posición de los elementos span */
+}
+
         
   </style>
 
@@ -214,7 +233,13 @@
             <span></span>
             Acceder
           </button>
-          <a href="{% url 'users:register' %}">¿No tienes una cuenta? Regístrate aquí</a>
+          <a class="button" href="{% url 'users:register' %}">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Registrarse
+        </a>
         </form>
       </div>
 
