Se traspaso exitosamente los datos de la base a la vista.

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -17,7 +17,7 @@
             <div class="col-8">
               <div class="numbers">
                 <p class="text-sm mb-0 text-uppercase font-weight-bold">PC Asignadas</p>
-                <h5 class="font-weight-bolder">PROXMIMAMENTE</h5>
+                <h5 class="font-weight-bolder">{{ computers_assigned_count }}</h5>
                 
               </div>
             </div>
@@ -37,7 +37,7 @@
             <div class="col-8">
               <div class="numbers">
                 <p class="text-sm mb-0 text-uppercase font-weight-bold">Tareas Asignadas</p>
-                <h5 class="font-weight-bolder">#Tareas</h5>
+                <h5 class="font-weight-bolder">{{ tasks_assigned_count }}</h5>
                 
               </div>
             </div>
@@ -57,7 +57,7 @@
             <div class="col-8">
               <div class="numbers">
                 <p class="text-sm mb-0 text-uppercase font-weight-bold">Recomendaciones Hechas</p>
-                <h5 class="font-weight-bolder">#De recomendaciones</h5>
+                <h5 class="font-weight-bolder">{{ recommendations_count }}</h5>
                 
               </div>
             </div>
