Modificado los estilos del dashboard

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -30,6 +30,10 @@
         </div>
       </div>
     </div>
+
+    
+
+
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
         <div class="card-body p-3">
@@ -71,29 +75,33 @@
       </div>
     </div>
     
-  <div class="row mt-4">
-    <div class="col-lg-7 mb-lg-0 mb-4">
-      <div class="card z-index-2 h-100">
-        <div class="card-header pb-0 pt-3 bg-transparent">
-          <h6 class="text-capitalize">Sales overview</h6>
-          <p class="text-sm mb-0">
-            <i class="fa fa-arrow-up text-success"></i>
-            <span class="font-weight-bold">4% more</span> in 2021
-          </p>
+    <div class="row">
+      <!-- Primer cuadro inferior -->
+      <div class="col-xl-3 col-sm-6 mb-4">
+        <div class="card">
+          <div class="card-body p-3">
+            <!-- Contenido del cuadro aquí -->
+          </div>
         </div>
-        <div class="card-body p-3">
-          <div class="chart">
-            <canvas id="chart-line" class="chart-canvas" height="300"></canvas>
+      </div>
+      <!-- Segundo cuadro inferior -->
+      <div class="col-xl-3 col-sm-6 mb-4">
+        <div class="card">
+          <div class="card-body p-3">
+            <!-- Contenido del cuadro aquí -->
+          </div>
+        </div>
+      </div>
+      <!-- Tercer cuadro inferior -->
+      <div class="col-xl-3 col-sm-6 mb-4">
+        <div class="card">
+          <div class="card-body p-3">
+            <!-- Contenido del cuadro aquí -->
           </div>
         </div>
       </div>
     </div>
-    <div class="col-lg-5">
-      <div class="card card-carousel overflow-hidden h-100 p-0">
-        
-      </div>
-    </div>
-  </div>
+
   {% comment %} <div class="row mt-4">
     <div class="col-lg-7 mb-lg-0 mb-4">
       <div class="card">
