--- a/templates/includes/sidebar-rtl.html
+++ b/templates/includes/sidebar-rtl.html
@@ -5,7 +5,7 @@
     <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href="/">
       <img src="{% static 'img/logo-ct-dark.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-      <span class="me-1 font-weight-bold">Argon Dashboard 2</span>
+      <span class="me-1 font-weight-bold">Inventario Laboratorios</span>
     </a>
   </div>
   <hr class="horizontal dark mt-0">
