--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -30,10 +30,6 @@
         </div>
       </div>
     </div>
-
-    
-
-
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
         <div class="card-body p-3">
@@ -74,13 +70,40 @@
         </div>
       </div>
     </div>
-    
+    <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
+      <div class="card">
+        <div class="card-body p-3">
+          <div class="row">
+            <div class="col-8">
+              <div class="numbers">
+                <p class="text-sm mb-0 text-uppercase font-weight-bold">Laboratorios asignados</p>
+                <h5 class="font-weight-bolder">{{ lab_count }}</h5>
+                
+              </div>
+            </div>
+            <div class="col-4 text-end">
+              <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
+                <i class="ni ni-mobile-button text-lg opacity-10" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <!-- Primer cuadro inferior -->
       <div class="col-xl-3 col-sm-6 mb-4">
         <div class="card">
           <div class="card-body p-3">
             <!-- Contenido del cuadro aquí -->
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Computadoras</p>
+            <ul>
+              {% for computer in computer_list %}
+              <li>{{ computer.id }} - {{ computer.lab_id.name }}</li>
+              {% endfor %}
+            </ul>
+
+            
           </div>
         </div>
       </div>
@@ -89,6 +112,12 @@
         <div class="card">
           <div class="card-body p-3">
             <!-- Contenido del cuadro aquí -->
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Tareas</p>
+            <ul>
+              {% for task in task_list %}
+              <li>{{ task.description }} - Estado: {{ task.status }}</li>
+              {% endfor %}
+            </ul>
           </div>
         </div>
       </div>
@@ -97,6 +126,26 @@
         <div class="card">
           <div class="card-body p-3">
             <!-- Contenido del cuadro aquí -->
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Recomendaciones</p>
+            <ul>
+              {% for recommendation in recommendation_list %}
+              <li>{{ recommendation.description }} - Fecha: {{ recommendation.date }}</li>
+              {% endfor %}
+          </ul>
+          </div>
+        </div>
+      </div>
+      <!-- Cuarto cuadro inferior -->
+      <div class="col-xl-3 col-sm-6 mb-4">
+        <div class="card">
+          <div class="card-body p-3">
+            <!-- Contenido del cuadro aquí -->
+            <p class="text-sm mb-0 text-uppercase font-weight-bold">Laboratorios</p>
+            <ul>
+              {% for lab in laboratory_list %}
+              <li>{{ lab.name }} - Piso: {{ lab.floor_number }}</li>
+              {% endfor %}
+            </ul>
           </div>
         </div>
       </div>
