Corregido iconos de la aplicacion

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -26,7 +26,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="{% static 'img/apple-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
+  <link rel="icon" type="image/webp" href="https://www.uta.edu.ec/v4.0/images/2023ale/favicon.webp">
   <title>
     Inventario Laboratorios
   </title>
