Corregido proyecto para inciar con el desarrollo

--- a/static/css/argon-dashboard.css
+++ b/static/css/argon-dashboard.css
@@ -10584,7 +10584,7 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #5e72e4 !important;
+  background-color: #000 !important;
 }
 
 .bg-secondary {
