--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -38,11 +38,11 @@
             <li class="nav-item d-flex align-items-center">
               <a href="{% url 'logout' %}" class="nav-link text-white font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
-                <span class="d-sm-inline d-none me-3">Logout</span>
+                <span class="d-sm-inline d-none me-3">Cerrar Sesión</span>
               </a>
             </li>
             <li class="nav-item d-flex align-items-center">
-              <a href="{% url 'password_change' %}" class="nav-link text-white font-weight-bold px-0"><span class="d-sm-inline d-none">Change Password</span></a>
+              <a href="{% url 'password_change' %}" class="nav-link text-white font-weight-bold px-0"><span class="d-sm-inline d-none">Cambiar Contraseña</span></a>
             </li>
           {% endif %}
         {% else %}
