--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -43,7 +43,7 @@
           {% if request.user.is_superuser %}
           <a href="{% url 'admin:index' %}" class="nav-link {% if 'index' in segment %} active {% endif %}">
           {% else %}
-          <a href="{% url 'index' %}" class="nav-link {% if 'index' in segment %} active {% endif %}">
+          <a href="{% url 'home:index' %}" class="nav-link {% if 'index' in segment %} active {% endif %}">
           {% endif %}
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
@@ -58,7 +58,7 @@
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
           </div>
-          <span class="nav-link-text ms-1">Tables</span>
+          <span class="nav-link-text ms-1">Uwu</span>
         </a>
       </li>
       <li class="nav-item">
@@ -85,17 +85,17 @@
           <span class="nav-link-text ms-1">RTL</span>
         </a>
       </li>
-      <li class="nav-item mt-3">
+      {% comment %} <li class="nav-item mt-3">
         <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">Account pages</h6>
-      </li>
-      <li class="nav-item">
+      </li> {% endcomment %}
+      {% comment %} <li class="nav-item">
         <a class="nav-link " href="{% url 'profile' %}">
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
             <i class="ni ni-single-02 text-dark text-sm opacity-10"></i>
           </div>
           <span class="nav-link-text ms-1">Profile</span>
         </a>
-      </li>
+      </li> {% endcomment %}
       {% endif %}
     </ul>
   </div>
