--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -56,7 +56,7 @@
           <div class="row">
             <div class="col-8">
               <div class="numbers">
-                <p class="text-sm mb-0 text-uppercase font-weight-bold">Recomendaciones Hechas</p>
+                <p class="text-sm mb-0 text-uppercase font-weight-bold">Recomendaciones</p>
                 <h5 class="font-weight-bolder">{{ recommendations_count }}</h5>
                 
               </div>
@@ -73,25 +73,26 @@
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
         <div class="card-body p-3">
-          <div class="row">
-            <div class="col-8">
-              <div class="numbers">
-                <p class="text-sm mb-0 text-uppercase font-weight-bold">Laboratorios asignados</p>
-                <h5 class="font-weight-bolder">{{ lab_count }}</h5>
-                
+          <a href="#">
+            <div class="row">
+              <div class="col-8">
+                <div class="numbers">
+                    <p class="text-sm mb-0 text-uppercase font-weight-bold">Labs. Asignados</p>
+                  <h5 class="font-weight-bolder">{{ lab_count }}</h5>
+                </div>
+              </div>
+              <div class="col-4 text-end">
+                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
+                  <i class="ni ni-mobile-button text-lg opacity-10" aria-hidden="true"></i>
+                </div>
               </div>
             </div>
-            <div class="col-4 text-end">
-              <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
-                <i class="ni ni-mobile-button text-lg opacity-10" aria-hidden="true"></i>
-              </div>
-            </div>
-          </div>
+          </a>
         </div>
       </div>
     </div>
 
-      <!-- Primer cuadro inferior -->
+      {% comment %} <!-- Primer cuadro inferior -->
       <div class="col-xl-3 col-sm-6 mb-4">
         <div class="card">
           <div class="card-body p-3">
@@ -148,10 +149,12 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> {% endcomment %}
+
+      {% block dcontent %}{% endblock dcontent %}
 
 
-  {% comment %} <div class="row mt-4">
+   {% comment %} <div class="row mt-4">
     <div class="col-lg-7 mb-lg-0 mb-4">
       <div class="card">
         <div class="card-header pb-0 p-3">
