--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -73,7 +73,7 @@
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
         <div class="card-body p-3">
-          <a href="#">
+          <a href={% url 'main:labs_list' %}>
             <div class="row">
               <div class="col-8">
                 <div class="numbers">
@@ -82,8 +82,8 @@
                 </div>
               </div>
               <div class="col-4 text-end">
-                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
-                  <i class="ni ni-mobile-button text-lg opacity-10" aria-hidden="true"></i>
+                <div class="icon icon-shape bg-gradient-secondary shadow-primary text-center rounded-circle">
+                  <i class="fas fa-door-open text-lg opacity-10" aria-hidden="true"></i>
                 </div>
               </div>
             </div>
