--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -47,7 +47,7 @@
 
 </head>
 
-<body class="g-sidenav-show bg-gray-100">
+<body class="g-sidenav-show bg-white">
     {% block overlay %}{% endblock overlay %}
     {% block sidebar %} 
       {% include "includes/sidebar.html" %}
