--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -4,7 +4,7 @@
 {% block title %} Home {% endblock title %}
 
 {% block overlay %}
-  <div class="min-height-300 bg-primary position-absolute w-100"></div>
+  <div class="min-height-300 bg-danger position-absolute w-100"></div>
 {% endblock overlay %}
 
 {% block content %}
