--- a/apps/main/templates/labs/create.html
+++ b/apps/main/templates/labs/create.html
@@ -25,12 +25,18 @@
                 {% for field in form %}
                 <tr>
                   <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">{{ field.label_tag }}</th>
-                  <td>{{ field }}</td>
+                  <td>
+                    {% if field.errors %}
+                    <span class="text-danger">{{ field.errors }}</span>
+                    {% endif %}
+                    {{ field }}
+                    
+                  </td>
                 </tr>
                 {% endfor %}
                 <tr>
                   <td colspan="2">
-                    <button type="submit" class="btn btn-primary">Actualizar</button>
+                    <button type="submit" class="btn btn-success">Crear</button>
                   </td>
                 </tr>
               </table>
