--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -12,22 +12,24 @@
   <div class="row">
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
-        <div class="card-body p-3">
-          <div class="row">
-            <div class="col-8">
-              <div class="numbers">
-                <p class="text-sm mb-0 text-uppercase font-weight-bold">PC Asignadas</p>
-                <h5 class="font-weight-bolder">{{ computers_assigned_count }}</h5>
-                
+        <a href={% url 'main:computers_list' %}>
+          <div class="card-body p-3">
+            <div class="row">
+              <div class="col-8">
+                <div class="numbers">
+                  <p class="text-sm mb-0 text-uppercase font-weight-bold">PC Asignadas</p>
+                  <h5 class="font-weight-bolder">{{ computers_assigned_count }}</h5>
+                  
+                </div>
               </div>
-            </div>
-            <div class="col-4 text-end">
-              <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
-                <i class="ni ni-mobile-button text-lg opacity-10" aria-hidden="true"></i>
+              <div class="col-4 text-end">
+                <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
+                  <i class="fas fa-desktop text-lg opacity-10" aria-hidden="true"></i>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
@@ -52,22 +54,24 @@
     </div>
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
-        <div class="card-body p-3">
-          <div class="row">
-            <div class="col-8">
-              <div class="numbers">
-                <p class="text-sm mb-0 text-uppercase font-weight-bold">Recomendaciones</p>
-                <h5 class="font-weight-bolder">{{ recommendations_count }}</h5>
-                
+        <a href={% url 'main:recomms_list' %}>
+          <div class="card-body p-3">
+            <div class="row">
+              <div class="col-8">
+                <div class="numbers">
+                  <p class="text-sm mb-0 text-uppercase font-weight-bold">Recomendaciones</p>
+                  <h5 class="font-weight-bolder">{{ recommendations_count }}</h5>
+                  
+                </div>
               </div>
-            </div>
-            <div class="col-4 text-end">
-              <div class="icon icon-shape bg-gradient-success shadow-success text-center rounded-circle">
-                <i class="ni ni-satisfied text-lg opacity-10" aria-hidden="true"></i>
+              <div class="col-4 text-end">
+                <div class="icon icon-shape bg-gradient-success shadow-success text-center rounded-circle">
+                  <i class="ni ni-satisfied text-lg opacity-10" aria-hidden="true"></i>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
