--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -34,22 +34,24 @@
     </div>
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
-        <div class="card-body p-3">
-          <div class="row">
-            <div class="col-8">
-              <div class="numbers">
-                <p class="text-sm mb-0 text-uppercase font-weight-bold">Tareas Asignadas</p>
-                <h5 class="font-weight-bolder">{{ tasks_assigned_count }}</h5>
-                
+        <a href={% url 'main:tasks_list' %}>
+          <div class="card-body p-3">
+            <div class="row">
+              <div class="col-8">
+                <div class="numbers">
+                  <p class="text-sm mb-0 text-uppercase font-weight-bold">Tareas Asignadas</p>
+                  <h5 class="font-weight-bolder">{{ tasks_assigned_count }}</h5>
+                  
+                </div>
               </div>
-            </div>
-            <div class="col-4 text-end">
-              <div class="icon icon-shape bg-gradient-danger shadow-danger text-center rounded-circle">
-                <i class="ni ni-paper-diploma text-lg opacity-10" aria-hidden="true"></i>
+              <div class="col-4 text-end">
+                <div class="icon icon-shape bg-gradient-danger shadow-danger text-center rounded-circle">
+                  <i class="fas fa-tasks text-lg opacity-10" aria-hidden="true"></i>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
