--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
-        <a href={% url 'main:computers_list' %}>
+        <a href={% url 'main:computersd_list' %}>
           <div class="card-body p-3">
             <div class="row">
               <div class="col-8">
@@ -77,7 +77,7 @@
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
         <div class="card-body p-3">
-          <a href={% url 'main:labs_list' %}>
+          <a href={% url 'main:labsd_list' %}>
             <div class="row">
               <div class="col-8">
                 <div class="numbers">
