Se arreglo todo las vistas conflictivas

--- a/apps/main/templates/computers/list.html
+++ b/apps/main/templates/computers/list.html
@@ -52,7 +52,7 @@
                     </tr>
                     {% empty %}
                     <tr>
-                      <td colspan="4">No hay laboratorios disponibles.</td>
+                      <td colspan="4">No hay computadoras disponibles.</td>
                     </tr>
                   {% endfor %}
                 </tbody>
