--- a/apps/main/templates/items/list.html
+++ b/apps/main/templates/items/list.html
@@ -1,59 +1,113 @@
 {% extends 'pages/dashboard.html' %}
+{% load extra_filters %}
 {% load static %}
 {% block dcontent %}
   <div class="container-fluid pt-4 mt-6">
     <div class="row">
       {% for item in lab_items %}
         <!-- Modal -->
-          <div class="modal fade" id="modal{{ item.id }}" tabindex="-1" aria-labelledby="modalLabel{{ item.id }}" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <!-- Cabecera del modal -->
-                <div class="modal-header">
-                  <h5 class="modal-title" id="modalLabel{{ item.id }}">Información {{ item.get_type_display }}</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-                </div>
-                <!-- Cuerpo del modal -->
-                <div class="modal-body">
-                  <ul class="text-dark">
-                    <li>Código: {{ item.code }}</li>
-                    <li>Marca: {{ item.brand }}</li>
-                    <li>Modelo: {{ item.model }}</li>
-                    <li>Descripción: {{ item.description }}</li>
-                    <li>Tipo: {{ item.get_type_display }}</li>
-                    <li>Laboratorio: {{ item.id_laboratory.name }}</li>
-                    <li>Responsable: {{ item.responsible_user_id.first_name }} {{ item.responsible_user_id.last_name }}</li>
-                  </ul>
-                </div>
-                <!-- Pie de página del modal -->
-                <div class="modal-footer">
-                  <button type="button" class="btn bg-danger text-white" data-bs-dismiss="modal">Cerrar</button>
-                </div>
+        <div class="modal fade" id="modal{{ item.id }}" tabindex="-1" aria-labelledby="modalLabel{{ item.id }}" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <!-- Cabecera del modal -->
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel{{ item.id }}">Información {{ item.get_type_display }}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+              </div>
+              <!-- Cuerpo del modal -->
+              <div class="modal-body">
+                <ul class="text-dark">
+                  <li>Código: {{ item.code }}</li>
+                  <li>Marca: {{ item.brand }}</li>
+                  <li>Modelo: {{ item.model }}</li>
+                  <li>Descripción: {{ item.description }}</li>
+                  <li>Tipo: {{ item.get_type_display }}</li>
+                  <li>Laboratorio: {{ item.id_laboratory.name }}</li>
+                  <li>Responsable: {{ item.responsible_user_id.first_name }} {{ item.responsible_user_id.last_name }}</li>
+                </ul>
+              </div>
+              <!-- Pie de página del modal -->
+              <div class="modal-footer">
+                <button type="button" class="btn bg-danger text-white" data-bs-dismiss="modal">Cerrar</button>
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col-xl-3 col-sm-6 mb-4 mt-3">
-            <a href="#" data-bs-toggle="modal" data-bs-target="#modal{{ item.id }}" class="text-dark text-decoration-none">
-              <div class="card h-100 bg-white" style="border: 2px solid black;">
-                <div class="card-body p-3">
-                  <div class="row">
-                    <div class="col-8">
-                      <div class="numbers">
-                        <p class="text-sm mb-0 text-uppercase font-weight-bold">{{ item.get_type_display }}</p>
-                        <span>Código: {{ item.code }}</span>
-                      </div>
+        <div class="col-xl-3 col-sm-6 mb-4 mt-3">
+          <a href="#" data-bs-toggle="modal" data-bs-target="#modal{{ item.id }}" class="text-dark text-decoration-none">
+            <div class="card h-100 bg-white" style="border: 2px solid black;">
+              <div class="card-body p-3">
+                <div class="row">
+                  <div class="col-8">
+                    <div class="numbers">
+                      <p class="text-sm mb-0 text-uppercase font-weight-bold">{{ item.get_type_display }}</p>
+                      <span>Código: {{ item.code }}</span>
                     </div>
-                    <div class="col-4 text-end">
-                      <div class="icon icon-shape bg-gradient-info shadow-primary text-center rounded-circle">
-                        <i class="fas fa-boxes text-lg opacity-10" aria-hidden="true"></i>
-                      </div>
+                  </div>
+                  <div class="col-4 text-end">
+                    <div class="icon icon-shape bg-gradient-info shadow-primary text-center rounded-circle">
+                      <i class="fas fa-boxes text-lg opacity-10" aria-hidden="true"></i>
                     </div>
                   </div>
                 </div>
               </div>
-            </a>
+            </div>
+          </a>
+        </div>
+      {% endfor %}
+      {% for pc in computers %}
+        <!-- Modal -->
+        <div class="modal fade" id="modal{{ pc.id }}" tabindex="-1" aria-labelledby="modalLabel{{ pc.id }}" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel{{ pc.id }}">Información {{ pc.code }}</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+              </div>
+              <div class="modal-body">
+                <ul class="text-dark">
+                  {% with items=computer_items_grouped|get_item:pc.id %}
+                    {% for item in items %}
+                      <h4>{{ item.get_type_display }}</h4>
+                      <li>Código: {{ item.code }}</li>
+                      <li>Marca: {{ item.brand }}</li>
+                      <li>Modelo: {{ item.model }}</li>
+                      <li>Descripción: {{ item.description }}</li>
+                      {% empty %}
+                      <li>No hay elementos para mostrar.</li>
+                    {% endfor %}
+                  {% endwith %}
+                </ul>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn bg-danger text-white" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+            </div>
           </div>
+        </div>
+
+        <div class="col-xl-3 col-sm-6 mb-4 mt-3">
+          <a href="#" data-bs-toggle="modal" data-bs-target="#modal{{ pc.id }}" class="text-dark text-decoration-none">
+            <div class="card h-100 bg-white" style="border: 2px solid black;">
+              <div class="card-body p-3 text-dark">
+                <div class="row">
+                  <div class="col-8">
+                    <div class="numbers">
+                      <p class="text-sm mb-0 text-uppercase font-weight-bold">PC {{ pc.code }}</p>
+                      <span>{{ pc.lab_id.name }}</span>
+                    </div>
+                  </div>
+                  <div class="col-4 text-end">
+                    <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
+                      <i class="fas fa-desktop text-lg opacity-10" aria-hidden="true"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
       {% endfor %}
     </div>
   </div>
