--- a/apps/main/templates/labs/list_dashboard.html
+++ b/apps/main/templates/labs/list_dashboard.html
@@ -7,7 +7,7 @@
                 <div class="col-xl-3 col-sm-6 mb-4 mt-3">
                     <div class="card h-100 bg-white" style="border: 2px solid black;">
                         <div class="card-body p-3">
-                            <a href={% url 'main:labitems_list' lab.pk %}>
+                            <a href={% url 'main:labitemsd_list' lab.pk %}>
                                 <div class="row">
                                     <div class="col-8">
                                         <div class="numbers">
