--- a/apps/main/templates/tasks/list_all.html
+++ b/apps/main/templates/tasks/list_all.html
@@ -16,7 +16,7 @@
         <div class="card mb-4">
             <div class="card-header pb-0 d-flex justify-content-between align-items-center">
                 <h6>{{ title }}</h6>
-                <a href="{% url 'main:compitem_create' %}" class="btn btn-success">Crear nuevo item</a>
+                <a href="{% url 'main:task_create' %}" class="btn btn-success">Crear nuevo item</a>
               </div>
           <div class="card-body px-0 pt-0 pb-2">
             <div class="table-responsive p-0">
@@ -24,38 +24,38 @@
                 <thead>
                   <tr>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7" scope="col">#</th>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Código</th>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Tipo</th>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Comp. Perteneciente</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Nombre</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Descripción</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Estado</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Acciones</th>
                     
                   </tr>
                 </thead>
                 <tbody>
-                  {% for item in computerItems %}
+                  {% for task in tasks %}
                     <tr>
                       <th scope="row">
                         <div class="my-auto">
-                          <h6 class="mb-0 text-sm">{{ item.id }}</h6>
+                          <h6 class="mb-0 text-sm">{{ task.id }}</h6>
                         </div>
                       </th>
 
                       <td>
-                        <p class="text-sm font-weight-bold mb-0">{{ item.code }}</p>
+                        <p class="text-sm font-weight-bold mb-0">{{ task.name }}</p>
                       </td>
                       <td>
-                        <span class="text-xs font-weight-bold">{{ item.type }}</span>
+                        <span class="text-xs font-weight-bold">{{ task.description }}</span>
                       </td>
                       <td>
-                        <span class="text-xs font-weight-bold">{{ item.id_computer }}</span>
+                        <span class="text-xs font-weight-bold">{{ task.status }}</span>
                       </td>
                       <td class="align-middle">
-                        <a href="{% url 'main:compitem_update' item.id %}" class="btn btn-info">Editar</a>
+                        <a href="{% url 'main:task_update' task.id %}" class="btn btn-info">Editar</a>
                       </td>
                     </tr>
                     {% empty %}
                     <tr>
-                      <td colspan="4">No hay items de computadoras disponibles.</td>
+                      <td colspan="4">No hay Tareas disponibles.</td>
                     </tr>
                   {% endfor %}
                 </tbody>
