--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -34,7 +34,7 @@
     </div>
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
-        <a href={% url 'main:tasks_list' %}>
+        <a href={% url 'main:tasksd_list' %}>
           <div class="card-body p-3">
             <div class="row">
               <div class="col-8">
@@ -56,7 +56,7 @@
     </div>
     <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
       <div class="card">
-        <a href={% url 'main:recomms_list' %}>
+        <a href={% url 'main:recommsd_list' %}>
           <div class="card-body p-3">
             <div class="row">
               <div class="col-8">
