Se dio accion al boton de actualizar del view de task, y se cambio el sidebar para a;adir o editar el inventario

--- a/apps/main/templates/tasks/list.html
+++ b/apps/main/templates/tasks/list.html
@@ -24,7 +24,9 @@
               <!-- Pie de página del modal -->
               <div class="modal-footer">
                 <button type="button" class="btn bg-danger text-white" data-bs-dismiss="modal">Cerrar</button>
-                <button type="submit" class="btn btn-success text-white" data-bs-dismiss="modal">Actualizar</button>
+                <a href="{% url 'main:task_update' task.id %}">
+                  <button type="button" class="btn btn-success text-white">Actualizar</button>
+                </a>
               </div>
             </div>
           </div>
