--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -5,6 +5,18 @@
   <hr class="horizontal dark mt-0">
   <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
     <ul class="navbar-nav">
+      <li class="nav-item">
+        {% if request.user.is_superuser %}
+        <a href="{% url 'admin:index' %}" class="nav-link {% if 'index' in segment %} active {% endif %}">
+        {% else %}
+        <a href="{% url 'home:index' %}" class="nav-link {% if 'index' in segment %} active {% endif %}">
+        {% endif %}
+        <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+          <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
+        </div>
+        <span class="nav-link-text ms-1">Dashboard</span>
+      </a>
+    </li>
       {% admin_get_menu as app_list %}
       {% if app_list %}
           {% for app in app_list %}
@@ -39,50 +51,55 @@
           {% endfor %}
       {% endif %}
 
-      <li class="nav-item">
-          {% if request.user.is_superuser %}
-          <a href="{% url 'admin:index' %}" class="nav-link {% if 'index' in segment %} active {% endif %}">
-          {% else %}
-          <a href="{% url 'home:index' %}" class="nav-link {% if 'index' in segment %} active {% endif %}">
-          {% endif %}
-          <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
-          </div>
-          <span class="nav-link-text ms-1">Dashboard</span>
-        </a>
-      </li>
+      
 
     {% if request.user.is_authenticated and not request.user.is_superuser %}
       <li class="nav-item">
-        <a class="nav-link " href="{% url 'tables' %}">
+        <a class="nav-link " href="{% url 'main:labs_list' %}">
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
+            <i class="ni ni-building text-warning text-sm opacity-10"></i>
           </div>
-          <span class="nav-link-text ms-1">Uwu</span>
+          <span class="nav-link-text ms-1">Laboratorios</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="{% url 'billing' %}">
+        <a class="nav-link " href="{% url 'main:computers_list' %}">
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
+            <i class="ni ni-laptop text-success text-sm opacity-10"></i>
           </div>
-          <span class="nav-link-text ms-1">Billing</span>
+          <span class="nav-link-text ms-1">Computadoras</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="{% url 'vr' %}">
+        <a class="nav-link " href="{% url 'main:compitems_list' %}">
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="ni ni-app text-info text-sm opacity-10"></i>
+            <i class="ni ni-single-copy-04 text-info text-sm opacity-10"></i>
           </div>
-          <span class="nav-link-text ms-1">Virtual Reality</span>
+          <span class="nav-link-text ms-1">Items de PCs</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="{% url 'rtl' %}">
+        <a class="nav-link " href="{% url 'main:labitems_list' %}">
           <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="ni ni-world-2 text-danger text-sm opacity-10"></i>
+            <i class="ni ni-archive-2 text-danger text-sm opacity-10"></i>
           </div>
-          <span class="nav-link-text ms-1">RTL</span>
+          <span class="nav-link-text ms-1">Items de Lab</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="{% url 'main:tasks_list' %}">
+          <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="ni ni-check-bold text-info text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Tareas</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="{% url 'main:recomms_list' %}">
+          <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="ni ni-bulb-61 text-danger text-sm opacity-10"></i>
+          </div>
+          <span class="nav-link-text ms-1">Recomendaciones</span>
         </a>
       </li>
       {% comment %} <li class="nav-item mt-3">
@@ -97,6 +114,7 @@
         </a>
       </li> {% endcomment %}
       {% endif %}
+      
     </ul>
   </div>
 </aside>
